scheduling and gradient clipping added

--- a/mnist_digits_snn/mnist_sequences.ipynb
+++ b/mnist_digits_snn/mnist_sequences.ipynb
@@ -10,20 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d5987de1-66bf-4940-883c-8f2244e64a55",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib created a temporary cache directory at /tmp/matplotlib-a1o2r467 because the default path (/home/jupyter-ikharitonov/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from pathlib import Path\n",
@@ -34,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ad5a43a6-9c99-4648-b4be-750a5837a47d",
    "metadata": {
     "tags": []
@@ -49,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4c09e522-1d8b-42b4-a3be-5a39779c32b5",
    "metadata": {},
    "outputs": [],
@@ -61,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7e78c2a3-9dd2-45b2-bb63-5e1fd440f2e7",
    "metadata": {
     "tags": []
@@ -70,10 +62,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f94b0c96350>"
+       "<matplotlib.image.AxesImage at 0x7fad0ca8be50>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -94,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "19e4065a-5a56-4549-8af0-c79ac51f7760",
    "metadata": {
     "tags": []
@@ -104,7 +96,7 @@
     "digit_duration = 0.5 # seconds\n",
     "in_between_digit_period = 0.5 # seconds\n",
     "number_of_digits = 10\n",
-    "sampling_freq = 1000 # Hz\n",
+    "sampling_freq = 100 # Hz\n",
     "\n",
     "total_time = number_of_digits * digit_duration + (number_of_digits + 1) * in_between_digit_period\n",
     "t = np.linspace(0, total_time, int(total_time*sampling_freq))"
@@ -112,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "dadc4a3c-daca-4eef-8adb-363748e960db",
    "metadata": {
     "tags": []
@@ -122,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10500,)\n"
+      "(1312,)\n"
      ]
     }
    ],
@@ -132,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "dcc8df54-9d62-4ba5-86d4-603e2781a3e0",
    "metadata": {
     "tags": []
@@ -144,7 +136,7 @@
        "(60000, 785)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "6bbd1e77-7ffe-4271-8472-3fdcaae930f5",
    "metadata": {
     "tags": []
@@ -171,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c2ddf931-5799-4dcf-be89-8e648b741bcb",
    "metadata": {
     "tags": []
@@ -183,7 +175,7 @@
        "(785,)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "699f83b1-af76-4aeb-9ad0-9a4fbdfe9c82",
    "metadata": {
     "tags": []
@@ -211,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e23cf89d-5a2e-414a-9fff-88f73be710fc",
    "metadata": {
     "tags": []
@@ -220,10 +212,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f94b0548e50>"
+       "<matplotlib.image.AxesImage at 0x7fad0c244590>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -244,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f96c8a3e-fddf-446d-bdf6-4d262e7e5d8c",
    "metadata": {
     "tags": []
@@ -270,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "4cedf99a-484d-473a-b10a-a9c16eba216a",
    "metadata": {
     "tags": []
@@ -282,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "7e0b3b68-c1cf-4b86-ab2b-8450f0c96307",
    "metadata": {
     "tags": []
@@ -299,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "0c243c2a-ba44-448a-8b3d-9f21577941b1",
    "metadata": {
     "tags": []
@@ -309,7 +301,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [01:19<00:00,  7.91s/it]\n"
+      "100%|██████████| 10/10 [00:08<00:00,  1.23it/s]\n"
      ]
     }
    ],
@@ -335,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "221095bd-f365-44fd-a24c-595245dba6b9",
    "metadata": {
     "tags": []
@@ -344,10 +336,10 @@
     {
      "data": {
       "text/plain": [
-       "(7500, 10500, 28, 28)"
+       "(7500, 1312, 28, 28)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "53efba27-111d-40eb-bce2-341305fa2c8f",
    "metadata": {
     "tags": []
@@ -377,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "435bc5c8-3e5a-495f-b7d4-6cf0a4488c7b",
    "metadata": {
     "tags": []
