--- a/mnist_digits_snn/mnist_sequences.ipynb
+++ b/mnist_digits_snn/mnist_sequences.ipynb
@@ -3,14 +3,16 @@
   {
    "cell_type": "markdown",
    "id": "cade38b8-6fa5-4c67-a2fd-d84b44387299",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Creating temporal sequences (network input) out of static MNIST images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "d5987de1-66bf-4940-883c-8f2244e64a55",
    "metadata": {
     "tags": []
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "ad5a43a6-9c99-4648-b4be-750a5837a47d",
    "metadata": {
     "tags": []
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "4c09e522-1d8b-42b4-a3be-5a39779c32b5",
    "metadata": {},
    "outputs": [],
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "id": "7e78c2a3-9dd2-45b2-bb63-5e1fd440f2e7",
    "metadata": {
     "tags": []
@@ -62,10 +64,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fad0ca8be50>"
+       "<matplotlib.image.AxesImage at 0x7f17209d10d0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "id": "19e4065a-5a56-4549-8af0-c79ac51f7760",
    "metadata": {
     "tags": []
@@ -94,9 +96,10 @@
    "outputs": [],
    "source": [
     "digit_duration = 0.5 # seconds\n",
+    "# in_between_digit_period = 0.12 # seconds\n",
     "in_between_digit_period = 0.5 # seconds\n",
     "number_of_digits = 10\n",
-    "sampling_freq = 100 # Hz\n",
+    "sampling_freq = 250 # Hz\n",
     "\n",
     "total_time = number_of_digits * digit_duration + (number_of_digits + 1) * in_between_digit_period\n",
     "t = np.linspace(0, total_time, int(total_time*sampling_freq))"
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "id": "dadc4a3c-daca-4eef-8adb-363748e960db",
    "metadata": {
     "tags": []
@@ -114,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1312,)\n"
+      "(2625,)\n"
      ]
     }
    ],
@@ -124,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "id": "dcc8df54-9d62-4ba5-86d4-603e2781a3e0",
    "metadata": {
     "tags": []
@@ -136,7 +139,7 @@
        "(60000, 785)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "id": "6bbd1e77-7ffe-4271-8472-3fdcaae930f5",
    "metadata": {
     "tags": []
@@ -163,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "id": "c2ddf931-5799-4dcf-be89-8e648b741bcb",
    "metadata": {
     "tags": []
@@ -175,7 +178,7 @@
        "(785,)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "id": "699f83b1-af76-4aeb-9ad0-9a4fbdfe9c82",
    "metadata": {
     "tags": []
@@ -203,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "id": "e23cf89d-5a2e-414a-9fff-88f73be710fc",
    "metadata": {
     "tags": []
@@ -212,10 +215,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fad0c244590>"
+       "<matplotlib.image.AxesImage at 0x7f1720413510>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -236,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "id": "f96c8a3e-fddf-446d-bdf6-4d262e7e5d8c",
    "metadata": {
     "tags": []
@@ -262,19 +265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "id": "4cedf99a-484d-473a-b10a-a9c16eba216a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "min_seqs = 750"
+    "min_seqs = 750\n",
+    "# min_seqs = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "id": "7e0b3b68-c1cf-4b86-ab2b-8450f0c96307",
    "metadata": {
     "tags": []
@@ -291,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "id": "0c243c2a-ba44-448a-8b3d-9f21577941b1",
    "metadata": {
     "tags": []
@@ -301,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:08<00:00,  1.23it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 256.85it/s]\n"
      ]
     }
    ],
@@ -327,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "id": "221095bd-f365-44fd-a24c-595245dba6b9",
    "metadata": {
     "tags": []
@@ -336,10 +340,10 @@
     {
      "data": {
       "text/plain": [
-       "(7500, 1312, 28, 28)"
+       "(10, 2625, 28, 28)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "53efba27-111d-40eb-bce2-341305fa2c8f",
    "metadata": {
     "tags": []
@@ -369,20 +373,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "id": "435bc5c8-3e5a-495f-b7d4-6cf0a4488c7b",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "np.save(Path.home()/f'RANCZLAB-NAS/iakov/produced/mnist_sequences_{sampling_freq}hz.npy', sequences)"
+    "np.save(Path.home()/f'RANCZLAB-NAS/iakov/produced/mnist_sequences_{sampling_freq}hz.npy', sequences)\n",
+    "# np.save(Path.home()/f'RANCZLAB-NAS/iakov/produced/mnist_sequences_{sampling_freq}hz_{in_between_digit_period}sec_pause.npy', sequences)\n",
+    "# np.save(Path.home()/f'RANCZLAB-NAS/iakov/produced/mnist_sequences_{sampling_freq}hz_single_seq.npy', sequences[:1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a1405937-a79f-492b-994d-cba399f6ed0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9817dfe3-be87-46a5-9348-ba5dc9cf3526",
+   "metadata": {},
+   "source": [
+    "## Simpler sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "c7944063-5505-4363-b3b6-2e5155cfa4e5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 1250, 28, 28)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# simple_sequence = [np.zeros((28,28))]\n",
+    "# for i in [1,3,5,7,9,11,13,15,17,19]:\n",
+    "#     plt.imshow(sequences[0,125*i,:,:])\n",
+    "#     plt.show()\n",
+    "#     simple_sequence.append(sequences[0,125*i,:,:])\n",
+    "#     simple_sequence.append(np.zeros((28,28)))\n",
+    "# simple_sequence = np.array(simple_sequence)\n",
+    "# simple_sequence = simple_sequence.reshape(1,simple_sequence.shape[0],simple_sequence.shape[1],simple_sequence.shape[2])\n",
+    "# simple_sequence.shape\n",
+    "\n",
+    "\n",
+    "simple_sequence = []\n",
+    "length = 125\n",
+    "for i in [1,3,5,7,9,11,13,15,17,19]:\n",
+    "    # plt.imshow(sequences[0,125*i,:,:])\n",
+    "    # plt.show()\n",
+    "    for _ in range(length):\n",
+    "        simple_sequence.append(sequences[0,125*i,:,:])\n",
+    "    # simple_sequence.append(np.zeros((28,28)))\n",
+    "simple_sequence = np.array(simple_sequence)\n",
+    "simple_sequence = simple_sequence.reshape(1,simple_sequence.shape[0],simple_sequence.shape[1],simple_sequence.shape[2])\n",
+    "simple_sequence.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "0d43b7ad-87bc-4512-adcc-0d584e599939",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "np.save(Path.home()/f'RANCZLAB-NAS/iakov/produced/mnist_simplest_sequence.npy', simple_sequence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3636268e-f9bd-4dd8-9bf6-65bb7a04106c",
    "metadata": {},
    "outputs": [],
    "source": []
