--- a/mnist_digits_snn/mnist_sequences.ipynb
+++ b/mnist_digits_snn/mnist_sequences.ipynb
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary cache directory at /tmp/matplotlib-t0afxewf because the default path (/home/jupyter-ikharitonov/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary cache directory at /tmp/matplotlib-u49wds0v because the default path (/home/jupyter-ikharitonov/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fd78fcdf9d0>"
+       "<matplotlib.image.AxesImage at 0x7f2e789ce790>"
       ]
      },
      "execution_count": 4,
@@ -223,7 +223,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fd78f376910>"
+       "<matplotlib.image.AxesImage at 0x7f2e782c0450>"
       ]
      },
      "execution_count": 11,
@@ -313,16 +313,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:17<00:00,  1.72s/it]\n"
+      "100%|██████████| 10/10 [00:17<00:00,  1.75s/it]\n"
      ]
     }
    ],
    "source": [
     "sequences = []\n",
+    "target_1to1_sequences = []\n",
+    "target_predictive_sequences = []\n",
     "for starting_digit in tqdm(range(10)): # loop of starting digits\n",
     "    for unique_seq_i in range(min_seqs): # loop of unique digit repetitions\n",
     "        \n",
     "        new_sequence = np.zeros((t.shape[0], 28, 28)).astype(np.uint8)\n",
+    "        new__1to1_sequence = np.zeros((t.shape[0], 10)).astype(np.uint8)\n",
+    "        new_predictive_sequence = np.zeros((t.shape[0], 10)).astype(np.uint8)\n",
     "\n",
     "        ind = starting_digit\n",
     "        time_ind = 0\n",
@@ -330,11 +334,22 @@
     "        for seq_i in range(10): # inner sequence loop\n",
     "            time_ind += in_between_digit_period * sampling_freq\n",
     "            new_digit = digits[ind][unique_seq_i]\n",
-    "            new_sequence[int(time_ind):int(time_ind+digit_duration*sampling_freq), :, :] = new_digit\n",
+    "            a = int(time_ind)\n",
+    "            b = int(time_ind+digit_duration*sampling_freq)\n",
+    "            new_sequence[a:b, :, :] = new_digit\n",
+    "            new__1to1_sequence[a:b, ind] = 1\n",
+    "            aa = int(a - in_between_digit_period * sampling_freq)\n",
+    "            bb = int(time_ind)\n",
+    "            new_predictive_sequence[aa:bb, ind] = 1\n",
+    "            \n",
     "            time_ind += digit_duration * sampling_freq\n",
     "            ind = get_next_ind(ind)\n",
     "        sequences.append(new_sequence)\n",
-    "sequences = np.array(sequences)"
+    "        target_1to1_sequences.append(new__1to1_sequence)\n",
+    "        target_predictive_sequences.append(new_predictive_sequence)\n",
+    "sequences = np.array(sequences)\n",
+    "target_1to1_sequences = np.array(target_1to1_sequences)\n",
+    "target_predictive_sequences = np.array(target_predictive_sequences)"
    ]
   },
   {
@@ -381,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "id": "435bc5c8-3e5a-495f-b7d4-6cf0a4488c7b",
    "metadata": {
     "tags": []
@@ -390,7 +405,10 @@
    "source": [
     "np.save(Path.home()/f'RANCZLAB-NAS/iakov/produced/mnist_sequences_{sampling_freq}hz.npy', sequences)\n",
     "# np.save(Path.home()/f'RANCZLAB-NAS/iakov/produced/mnist_sequences_{sampling_freq}hz_{in_between_digit_period}sec_pause.npy', sequences)\n",
-    "# np.save(Path.home()/f'RANCZLAB-NAS/iakov/produced/mnist_sequences_{sampling_freq}hz_single_seq.npy', sequences[:1])"
+    "# np.save(Path.home()/f'RANCZLAB-NAS/iakov/produced/mnist_sequences_{sampling_freq}hz_single_seq.npy', sequences[:1])\n",
+    "\n",
+    "np.save(Path.home()/f'RANCZLAB-NAS/iakov/produced/mnist_sequences_{sampling_freq}hz_1to1_targets.npy', target_1to1_sequences)\n",
+    "np.save(Path.home()/f'RANCZLAB-NAS/iakov/produced/mnist_sequences_{sampling_freq}hz_predictive_targets.npy', target_predictive_sequences)"
    ]
   },
   {
