--- a/mnist_digits_snn/mnist_sequences.ipynb
+++ b/mnist_digits_snn/mnist_sequences.ipynb
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary cache directory at /tmp/matplotlib-u49wds0v because the default path (/home/jupyter-ikharitonov/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary cache directory at /tmp/matplotlib-azk9o1i3 because the default path (/home/jupyter-ikharitonov/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f2e789ce790>"
+       "<matplotlib.image.AxesImage at 0x7efca0350150>"
       ]
      },
      "execution_count": 4,
@@ -223,7 +223,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f2e782c0450>"
+       "<matplotlib.image.AxesImage at 0x7efca039e250>"
       ]
      },
      "execution_count": 11,
@@ -313,7 +313,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:17<00:00,  1.75s/it]\n"
+      "100%|██████████| 10/10 [00:16<00:00,  1.64s/it]\n"
      ]
     }
    ],
